generalize to a bunch of diff currencies

--- a/public/js/chartiq/stx-demo.html
+++ b/public/js/chartiq/stx-demo.html
@@ -157,7 +157,7 @@ Copyright 2012 by ChartIQ LLC
       </div>
     </div>
 
-    <img id="loading" src="stx-loading.gif" style="display:none">
+    <img id="loading" src="../../css/stx-loading.gif" style="display:none">
 
     <!-- Indicator Dialogs -->
     <div class="dialogContainer">
